--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,17 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+        window.xxzListener = {
+            xxzEvent:{},
+        }
+        window.xxzListener.on = (key,callback) => {
+            xxzListener.xxzEvent[key] = callback
+        }
+        window.xxzListener.emit = (key,data) => {
+            xxzListener.xxzEvent[key](data)
+        }
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
